VM::isTerminationException() should only be run on a non-null exception value. https://bugs.webkit.org/show_bug.cgi?id=226417 rdar://78646170

Reviewed by Filip Pizlo.

* jsc.cpp:
(runInteractive):


Canonical link: https://commits.webkit.org/238277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278240 268f45cc-cd09-0410-ab3c-d52691b4dbfc