Source/JavaScriptCore/jsc.cpp
@@ -3139,7 +3139,7 @@ static void runInteractive(GlobalObject* globalObject)
         NakedPtr<Exception> evaluationException;
         JSValue returnValue = evaluate(globalObject, jscSource(line, sourceOrigin, sourceOrigin.string()), JSValue(), evaluationException);
 #endif
-        if (vm.isTerminationException(evaluationException.get()))
+        if (evaluationException && vm.isTerminationException(evaluationException.get()))
             vm.setExecutionForbidden();
 
         Expected<CString, UTF8ConversionError> utf8;
